# stage-info4

./: Journal de bord.md  README.md
herodotos_dune/: .depend  .depend.erase  .jgrfiles  .projects_test.hc  Makefile  Makefile.config  Makefile~  ast.cmi  ast_config.cmi  ast_diff.cmi  ast_exist.cmi  cfgcorrel.ml  cfgcorrel.ml~  cfgerase.ml~  cfghelper.ml~  cfginit.ml  cfginit.ml~  cfgmode.ml~  cfgpreinit.ml  cfgpreinit.ml~  cfgscm.ml  cfgscm.ml~  cfgstat.ml  cfgstat.ml~  commons.cma  config.ml  config.ml~  config_lexer.ml  correl.ml  correl.ml~  cpt_scm_stats.ml  cpt_scm_stats.ml~  csv.annot  csv.cmi  csv.cmo  debug.annot  debug.cmi  debug.cmo  debug.ml~  diff.ml  (+46 more)
herodotos_dune/_build/: .db  .digest-db  log
herodotos_dune/_build/default/: cfgcorrel.ml  cfgerase.ml  cfghelper.ml  cfginit.ml  cfgmode.ml  cfgpreinit.ml  cfgscm.ml  cfgstat.ml  config.ml  config_parser.ml  config_parser.mli  config_parser__mock.ml.mock  correl.ml  (+19 more)
herodotos_dune/cocci/: openssl.h
herodotos_dune/exists/: exist_lexer.ml  exist_parser.ml
herodotos_dune/hcl/: config_parser.ml
herodotos_dune/lib/: dune
herodotos_dune/org/: org_parser.ml
herodotos_dune/scripts/: Makefile.images  Makefile.inc
herodotos_dune/test/: Makefile  dune  fooldir.sh
herodotos_duned/: Deps  debug.config  dune
herodotos_duned/commons/: .depend
herodotos_duned/database/: .depend
herodotos_duned/diff+org/: .depend
herodotos_duned/exists/: dune~
herodotos_duned/html/: .depend
herodotos_duned/scm/: .depend
herodotos_duned/test/: #Makefile#  .depend.erase  .depend.patterns  Makefile~  debug.config~
(+1563 files in other folders)
