(executable
	(name herodotos)
	
	(modules_without_implementation ast ast_bugs ast_config ast_diff ast_exist
ast_org diff_type)

	(libraries unix str threads dynlink volt parmap postgresql))
	
(env
  (dev
    (flags (:standard -warn-error -A))))
    
(menhir
 (modules config_parser exist_parser org_parser))    


